[package]
name = "markdown-rs"
version = "0.2.0"
authors = ["Nil Gradisnik <nil.gradisnik@gmail.com>"]
description = "Fast, simple, distraction free Markdown editor."
repository = "@nilgradisnik/markdown-rs"
readme = "README.md"
license = "MIT"

[dependencies]
gio = "0.8"
sourceview = "0.8"
comrak = "0.7"
horrorshow = "0.8"
webkit2gtk = "0.9"

[dependencies.gtk]
version = "0.8"
features = ["v3_22"]
