[package]
name = "markdown-rs"
version = "0.2.1"
authors = ["Nil Gradisnik <nil.gradisnik@gmail.com>"]
description = "Fast, simple, distraction free Markdown editor."
repository = "@nilgradisnik/markdown-rs"
readme = "README.md"
license = "MIT"

[dependencies]
gio = "0.9.1"
sourceview = "0.9.0"
comrak = "0.8.2"
horrorshow = "0.8.3"
webkit2gtk = "0.10.0"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_22"]
