[package]
name = "markdown-rs"
version = "0.2.2"
authors = ["Nil Gradisnik <nil.gradisnik@gmail.com>"]
description = "Fast, simple, distraction free Markdown editor."
repository = "@nilgradisnik/markdown-rs"
readme = "README.md"
license = "MIT"

[dependencies]
gio = "0.9"
sourceview = "0.9"
comrak = "0.8"
horrorshow = "0.8"
webkit2gtk = "0.10"

[dependencies.gtk]
version = "0.9"
features = ["v3_22"]
